Changes in top level CVS tree (please add your changes at the very top of
the file):

Change by dragonm@absolut.tegris.org - improve crossedit so that if you
try to load a map you alreay have in memory, it will raise the window - 
it will also give you the option to forget, save changes, or just raise
the window if the in memory version of that map has been modified.  Checked
in by msw. (crossedit, App.c, Edit.c, Edit.h)

Bugfix in server/apply.c - apply_container()
  When checking for keys to locked containers, only searched player's
  inventory, not keyrings.  Changed to use FindKey function in player.c,
  which does search keyrings.
  --DAMN

Bugfix in server/main.c - enter_exit()
  Unique maps were using their actual location as a path for moving to
  a new map.  They need to use the location of the original map, not
  the character's individual copy of it.  This is re-constructed from
  the individual map's filename, which is based on the original path.
  --DAMN

Remove xbmtobdf man page - since it is run automatically and it is likely
that people will not run it manually (and it appears to be innacruate - or
at least imcomplete), may as well remove it.  - msw

Change install location of man pages to section 6 instead of section 1 - msw

New man page submitted by Egbert Hinzen that is actually correct and
accurate as the options now relate to crossfire. - msw

    This one is a suggested fix for the alchemy bug that grants obscene
    amounts of experience for certain formulas.  Those formulas are the ones
    that create items with a high fixed level, because those items are
    pretty worthless otherwise.  Dust of Repelling Undead, for example, is
    level 30.
        The fix I implemented here is to base the chance of success largely
	on the level of the product, so it's very difficult to produce
	something like Dust of Repelling Undead, and therefore worth the
	extra experience.  The chance of success is now based on the
	following factors: